Revise meta tags for improved SEO and branding
Updated meta tags for SEO and social media sharing.

--- a/index.html
+++ b/index.html
@@ -6,22 +6,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
         <!-- Keywords (not heavily used by Google but good for others) -->
-    <meta name="keywords" content="Backkai, Backkai LLC, video editing, AI services, web development, digital marketing, Delaware digital company, outsourcing, creative media">
+    <meta name="keywords" content="Backkai, Backkai LLC is a Delaware-based technical partner for businesses that need speed, security, and AI automation. No fluff, just code.">
 
     <!-- Author -->
     <meta name="author" content="Backkai LLC">    
 
         <!-- Open Graph (for Facebook, LinkedIn) -->
-    <meta property="og:title" content="Backkai LLC | Digital Services & AI Solutions">
-    <meta property="og:description" content="AI-driven, human-centered digital services including video editing, web development, marketing, and outsourcing.">
-    <meta property="og:image" content="https://www.backkai.com/assets/og-image.jpg">
-    <meta property="og:url" content="https://www.backkai.com">
-    <meta property="og:type" content="website">
+    <title>Backkai LLC | High-Performance Web Development & AI Automation</title>
+    <link rel="icon" type="image/png" href="Backkai.png">
+    <meta name="description" content="Backkai LLC is a Delaware-based technical partner specializing in high-speed web development, website bug fixing, and AI business automation. Get your free speed audit today.">
+    <meta name="keywords" content="Web Performance, Speed Optimization, AI Automation, NotebookLM, Website Maintenance, Wedding Video Editing, Backkai LLC, Delaware Web Agency, Bug Fixing">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Backkai LLC">
+    <meta name="language" content="English">
 
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://backkai.com/">
+    <meta property="og:title" content="Backkai LLC | We Fix Broken Websites & Automate Boring Work">
+    <meta property="og:description" content="Is your website slow? We build digital assets that load instantly. US-based technical support and AI automation workflows.">
+    <meta property="og:image" content="https://backkai.com/Backkai.png">
+    
         <!-- Twitter Cards -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Backkai LLC | Digital Services & AI Solutions">
-    <meta name="twitter:description" content="AI-driven, human-centered digital services including video editing, web development, marketing, and outsourcing.">
+   <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://backkai.com/">
+    <meta property="twitter:title" content="Backkai LLC | High-Performance Web Development">
+    <meta property="twitter:description" content="Is your website slow? We build digital assets that load instantly. US-based technical support and AI automation workflows.">
     <meta name="twitter:image" content="https://www.backkai.com/assets/og-image.jpg">
 
     <script type="application/ld+json">
