Update hero section and service descriptions

--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                         <li><a href="#services">Web & App Development</a></li>
                         <li><a href="#services">AI & Automation</a></li>
                         <li><a href="#services">Social Media Marketing</a></li>
-                        <li><a href="#services">Video Editing</a></li>
+                    <!--    <li><a href="#services">Video Editing</a></li> -->
                     </ul>
                 </li>
                 <li><a href="#why-us" class="nav-link">About</a></li>
@@ -460,8 +460,8 @@
         <!-- Hero Section -->
         <section class="hero" id="home">
             <div class="container">
-                <h1>AI Driven Solutions. Human Centered Impact.</h1>
-                <p>“We provide end-to-end digital solutions, ensuring your operations run seamlessly while you focus on scaling your business.”</p>
+                <h1>Backkai LLC | We Fix Broken Websites & Automate Boring Work.</h1>
+                <p>“Backkai LLC is a Delaware-based technical partner for businesses that need speed, security, and AI automation. No fluff, just code.”</p>
                 <div class="hero-buttons">
                     <a href="https://mail.google.com/mail/?view=cm&fs=1&to=info@backkai.com" target="_blank" rel="noopener" class="btn btn-primary">Email Us</a>
 
@@ -472,7 +472,7 @@
         <!-- Service Overview Grid -->
         <section id="services">
             <div class="container">
-                <h2>Your Complete Back-Office Solution</h2>
+                <h2>We build digital assets and AI automation workflows.</h2>
                 <div class="services-grid">
                     <div class="service-card">
                         <i data-feather="code" width="48" height="48"></i>
@@ -489,7 +489,7 @@
                         <h3>Digital Marketing / Social Media Marketing</h3>
                         <p>Strategic marketing campaigns to boost your online presence and engagement.</p>
                     </div>
-                    <div class="service-card">
+                 <!--    <div class="service-card">
                         <i data-feather="cpu" width="48" height="48"></i>
                         <h3>Video Editing / Post-Production</h3>
                         <p>Professional Post-Production for Business, ads, and corporate communications.</p>
@@ -504,16 +504,16 @@
                         <h3>Back Office Support</h3>
                         <p>Comprehensive administrative support to keep your operations running smoothly.</p>
                     </div>
-                    <div class="service-card">
+                  <div class="service-card">
                         <i data-feather="globe" width="48" height="48"></i>
                         <h3>Remote Services</h3>
                         <p>Flexible remote workforce solutions tailored to your business needs.</p>
-                    </div>
-                    <div class="service-card">
+                    </div> 
+                   <div class="service-card">
                         <i data-feather="headphones" width="48" height="48"></i>
                         <h3>Customer Care</h3>
                         <p>Professional customer support services to enhance client satisfaction.</p>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
