--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
         <!-- Hero Section -->
         <section class="hero" id="home">
             <div class="container">
-                <h1>Backkai LLC | We Fix Broken Websites & Automate Boring Work.</h1>
+                <h1>We Fix Broken Websites & Automate Boring Work.</h1>
                 <p>“Backkai LLC is a Delaware-based technical partner for businesses that need speed, security, and AI automation. No fluff, just code.”</p>
                 <div class="hero-buttons">
                     <a href="https://mail.google.com/mail/?view=cm&fs=1&to=info@backkai.com" target="_blank" rel="noopener" class="btn btn-primary">Email Us</a>
@@ -603,17 +603,17 @@
                             <img src="https://images.unsplash.com/photo-1557862921-37829c790f19?q=80&w=2071&auto=format&fit=crop" alt="Author 1">
                             <div class="author-info">
                                 <strong>John Carter</strong>
-                                <span>Innovate Inc.</span>
+                                <span>Innovate llc.</span>
                             </div>
                         </div>
                     </div>
                     <div class="testimonial-card">
-                        <p>"The video editing service is incredible. They took our raw footage and turned it into polished, professional content that has significantly boosted our social media engagement."</p>
+                        <p>"The website fixing service is incredible. They took our website access and turned it into professional lead generation Machine."</p>
                         <div class="testimonial-author">
                             <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?q=80&w=2070&auto=format&fit=crop" alt="Author 2">
                             <div class="author-info">
-                                <strong>Sarah Chen</strong>
-                                <span>Creative Co.</span>
+                                <strong>Sara patel</strong>
+                                <span>Creative design.</span>
                             </div>
                         </div>
                     </div>
