Update testimonial author name to 'Sara'

--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
                         <div class="testimonial-author">
                             <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?q=80&w=2070&auto=format&fit=crop" alt="Author 2">
                             <div class="author-info">
-                                <strong>Sara patel</strong>
+                                <strong>Sara</strong>
                                 <span>Creative design.</span>
                             </div>
                         </div>
