Revise Terms of Service with updated details
Updated terms of service to reflect new policies and contact information.

--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -34,14 +34,33 @@
       font-size: 1.5rem;
       margin-top: 40px;
       margin-bottom: 15px;
+      border-bottom: 1px solid #333;
+      padding-bottom: 10px;
     }
 
     p {
       margin-bottom: 15px;
     }
 
+    ul {
+      margin-bottom: 15px;
+      padding-left: 20px;
+    }
+
+    li {
+      margin-bottom: 10px;
+    }
+
     strong {
       color: #fff;
+    }
+
+    .alert-box {
+      background-color: #1f1f1f;
+      border-left: 4px solid #6366f1;
+      padding: 15px;
+      margin: 20px 0;
+      border-radius: 4px;
     }
 
     a {
@@ -58,13 +77,15 @@
       text-align: center;
       font-size: 0.9rem;
       color: #888;
+      border-top: 1px solid #333;
+      padding-top: 20px;
     }
   </style>
 </head>
 <body>
   <div class="container">
     <h1>Terms & Conditions</h1>
-    <p><em>Last Updated: 09/08/2025</em></p>
+    <p><em>Last Updated: January 12, 2026</em></p>
 
     <p>Welcome to Backkai LLC. By accessing or using our website and services, you agree to these Terms & Conditions (“Terms”). Please read them carefully.</p>
 
@@ -72,52 +93,67 @@
     <p>Backkai LLC (“Backkai,” “we,” “our,” or “us”) is a Delaware-registered company that provides digital services, including but not limited to video editing, web and app development, AI & automation solutions, digital marketing, and outsourcing services.</p>
 
     <h2>2. Acceptance of Terms</h2>
-    <p>By using our website or services, you agree to comply with these Terms, our <a href="privacy-policy.html">Privacy Policy</a>, and all applicable laws.</p>
+    <p>By using our website, paying an invoice, or subscribing to our services, you agree to comply with these Terms, our <a href="privacy-policy.html">Privacy Policy</a>, and all applicable laws.</p>
 
     <h2>3. Services</h2>
-    <p>Services are provided on a project, subscription, or retainer basis as agreed in writing. We reserve the right to refuse services that violate applicable laws.</p>
+    <p>Services are provided on a project, subscription, or retainer basis as agreed in writing. We reserve the right to refuse services that violate applicable laws or our internal safety policies.</p>
 
-    <h2>4. Payments</h2>
-    <p>Payments must be made as agreed. For projects requiring deposits, work begins only after payment confirmation. We may suspend services for late or failed payments.</p>
+    <h2>4. Payments & Billing Authorization</h2>
+    <p><strong>4.1. Authorization:</strong> By providing a credit card, debit card, or other payment method, you expressly authorize Backkai LLC to charge the agreed-upon fees (one-time or recurring). You confirm that you are the authorized holder of the payment method.</p>
+    <p><strong>4.2. Late Payments:</strong> We reserve the right to suspend services immediately for any late or failed payments. Unpaid invoices may be subject to a 5% late fee.</p>
 
-    <h2>5. Client Responsibilities</h2>
+    <div class="alert-box">
+      <h2>5. Refunds, Cancellations & Anti-Chargeback Policy</h2>
+      <p><strong>5.1. No Refunds on Digital Services:</strong> Due to the nature of digital services (video editing, coding, consulting, AI workflows), all sales are final. Once work has commenced, time and labor cannot be recovered. Therefore, <strong>we do not offer refunds</strong> for services rendered, even if you choose to cancel the project early.</p>
+      
+      <p><strong>5.2. Subscription Cancellations:</strong> You may cancel recurring subscriptions (e.g., Website Care Plans) at any time. Cancellations will take effect at the end of the current billing cycle. No prorated refunds will be issued for unused days in the billing month.</p>
+      
+      <p><strong>5.3. Dispute & Chargeback Waiver:</strong> By engaging our services, you agree to the following:</p>
+      <ul>
+        <li>You will not file a chargeback, dispute, or claim with your bank or credit card provider ("Dispute") without first contacting Backkai LLC support at <a href="mailto:info@backkai.com">info@backkai.com</a> to attempt a resolution.</li>
+        <li>You acknowledge that filing a Dispute for valid work performed is a material breach of these Terms.</li>
+        <li>In the event of a Dispute, we will submit this document, your IP address, and work logs to your bank as evidence of your authorization and agreement to these "No Refund" terms.</li>
+        <li><strong>Recovery Fees:</strong> If a Dispute is ruled in our favor, you agree to reimburse Backkai LLC for any chargeback fees, administrative costs (minimum $50), and legal fees incurred during the process.</li>
+      </ul>
+    </div>
+    <h2>6. Client Responsibilities</h2>
     <p>Clients must provide accurate information and ensure that all materials shared with us (e.g., logos, videos, text) do not infringe third-party rights.</p>
 
-    <h2>6. Intellectual Property</h2>
+    <h2>7. Intellectual Property</h2>
     <p><strong>Client Content:</strong> You retain ownership of your content. <br>
        <strong>Final Deliverables:</strong> Ownership is transferred to you once payment is complete. <br>
-       <strong>Backkai Materials:</strong> We retain rights to internal tools and frameworks used in delivering services.</p>
+       <strong>Backkai Materials:</strong> We retain rights to internal tools, AI prompts, and code frameworks used in delivering services.</p>
 
-    <h2>7. Confidentiality</h2>
+    <h2>8. Confidentiality</h2>
     <p>We will keep your business and personal information confidential, except where disclosure is legally required.</p>
 
-    <h2>8. Data Protection & Privacy</h2>
-    <p>We comply with U.S., EU (GDPR), and UAE data protection laws. We do not sell personal data. Data is shared only with trusted providers such as payment gateways and hosting services when necessary. See our <a href="privacy-policy.html">Privacy Policy</a> for details.</p>
+    <h2>9. Data Protection & Privacy</h2>
+    <p>We comply with U.S., EU (GDPR), and UAE data protection laws. We do not sell personal data. Data is shared only with trusted providers such as payment gateways (Stripe) and hosting services when necessary. See our <a href="privacy-policy.html">Privacy Policy</a> for details.</p>
 
-    <h2>9. Limitation of Liability</h2>
+    <h2>10. Limitation of Liability</h2>
     <p>Our services are provided “as-is.” We are not liable for indirect or consequential damages. Liability is limited to the amount you paid us for the service in question.</p>
 
-    <h2>10. Termination</h2>
-    <p>You may terminate services with written notice. We may terminate services for non-payment, misuse, or violation of these Terms.</p>
+    <h2>11. Termination</h2>
+    <p>You may terminate services with written notice. We may terminate services immediately for non-payment, misuse, abusive behavior, or violation of these Terms.</p>
 
-    <h2>11. Governing Law</h2>
-    <p>These Terms are governed by the laws of Delaware, U.S.A., unless otherwise required by your local jurisdiction.</p>
+    <h2>12. Governing Law</h2>
+    <p>These Terms are governed by the laws of <strong>Delaware, U.S.A.</strong>, unless otherwise required by your local jurisdiction.</p>
 
-    <h2>12. Dispute Resolution</h2>
+    <h2>13. Dispute Resolution</h2>
     <p>We aim to resolve disputes amicably. If unresolved, disputes may be handled by arbitration or in the courts of Delaware, U.S.A.</p>
 
-    <h2>13. Updates to Terms</h2>
+    <h2>14. Updates to Terms</h2>
     <p>We may update these Terms from time to time. Changes will be posted with a new “Last Updated” date. Continued use of services means you accept the changes.</p>
 
-    <h2>14. Contact Us</h2>
+    <h2>15. Contact Us</h2>
     <p>If you have questions about these Terms, contact us:</p>
     <p><strong>Backkai LLC</strong><br>
        8 The Green, Dover, Delaware 19901, USA<br>
        📞 +1 (302) 276-8188<br>
-       📧 <a href="mailto:Backkai@backkai.com">Info@backkai.com</a></p>
+       📧 <a href="mailto:info@backkai.com">info@backkai.com</a></p>
 
     <footer>
-      &copy; 2025 Backkai LLC. All Rights Reserved.
+      &copy; 2026 Backkai LLC. All Rights Reserved.
     </footer>
   </div>
 </body>
