--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -6,7 +6,7 @@
   <title>Privacy Policy | Backkai LLC</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Inter', Arial, sans-serif;
       background: #0f0f0f;
       color: #d1d1d1;
       line-height: 1.7;
@@ -34,10 +34,16 @@
       font-size: 1.5rem;
       margin-top: 40px;
       margin-bottom: 15px;
+      border-bottom: 1px solid #333;
+      padding-bottom: 10px;
     }
 
-    p {
+    p, li {
       margin-bottom: 15px;
+    }
+
+    ul {
+      padding-left: 20px;
     }
 
     strong {
@@ -53,70 +59,101 @@
       text-decoration: underline;
     }
 
+    .highlight-box {
+      background: #1a1a1a;
+      border-left: 4px solid #0070f3;
+      padding: 15px;
+      margin: 20px 0;
+    }
+
     footer {
       margin-top: 50px;
       text-align: center;
       font-size: 0.9rem;
       color: #888;
+      border-top: 1px solid #333;
+      padding-top: 20px;
     }
   </style>
 </head>
 <body>
   <div class="container">
     <h1>Privacy Policy</h1>
-    <p><em>Last Updated: 09/08/2025</em></p>
+    <p><em>Last Updated: January 12, 2026</em></p>
 
-    <p>Backkai LLC (“we,” “our,” or “us”) is committed to protecting your privacy. This Privacy Policy explains how we collect, use, and safeguard your information in compliance with U.S. (including California CCPA/CPRA),(GDPR), and (UAE Federal Law No. 45 of 2021).</p>
+    <p>Backkai LLC (“we,” “our,” or “us”) is a Delaware-registered company committed to protecting your privacy. This Privacy Policy explains how we collect, use, and safeguard your information when you use our web development, AI automation, and digital services.</p>
+    
+    <p>This policy complies with major global standards, including the <strong>California Consumer Privacy Act (CCPA/CPRA)</strong>, the <strong>General Data Protection Regulation (GDPR)</strong>, and <strong>UAE Federal Decree-Law No. 45</strong>.</p>
 
     <h2>1. Information We Collect</h2>
-    <p>We may collect personal information such as your name, email, phone number, billing address, and payment details. Technical information like IP addresses, browser type, and website usage may also be collected.</p>
+    <p>We collect specific data to provide our services and ensure security. This includes:</p>
+    <ul>
+      <li><strong>Identity Data:</strong> Name, username, or similar identifier.</li>
+      <li><strong>Contact Data:</strong> Billing address, email address, and telephone number.</li>
+      <li><strong>Financial Data:</strong> Partial payment details (e.g., last 4 digits of card). <em>Note: We do not store full credit card numbers; these are processed securely by Stripe/PayPal.</em></li>
+      <li><strong>Technical & Usage Data (Critical for Security):</strong> IP address, browser type, time zone setting, operating system, and access logs showing when you accepted our Terms of Service.</li>
+    </ul>
 
     <h2>2. How We Use Your Information</h2>
-    <p>We only use your data to provide services, verify payments, process transactions, communicate with you, improve our services, and comply with legal obligations.</p>
-
-    <h2>3. Data Sharing</h2>
-    <p>We <strong>do not sell, rent, or trade personal data</strong> to anyone. Your data is only shared with:</p>
+    <p>We use your data for the following purposes:</p>
     <ul>
-      <li>Trusted payment processors (e.g., Stripe, PayPal, banks) for verification and fraud prevention.</li>
-      <li>Service providers (hosting, email, analytics) under strict confidentiality agreements.</li>
-      <li>Authorities if required by law.</li>
+      <li>To deliver the digital services and AI workflows you purchased.</li>
+      <li>To process payments and manage accounting.</li>
+      <li><strong>For Fraud Prevention:</strong> We use IP addresses and device data to detect fraudulent transactions and prevent unauthorized chargebacks.</li>
+      <li>To comply with legal obligations and enforce our <a href="terms-of-service.html">Terms of Service</a>.</li>
     </ul>
 
-    <h2>4. Your Rights</h2>
-    <p>Depending on your location, you may have rights to access, delete, correct, restrict, or object to the use of your data.</p>
+    <div class="highlight-box">
+        <h3>3. AI & Client Data Confidentiality</h3>
+        <p><strong>We respect your proprietary data.</strong> When we build AI workflows or use tools like NotebookLM for your business:</p>
+        <ul>
+            <li>We <strong>do not</strong> use your confidential business data to train public AI models.</li>
+            <li>Your data remains isolated and is used solely to configure your specific automation systems.</li>
+            <li>Once the project is delivered, we can delete your raw data upon request.</li>
+        </ul>
+    </div>
+
+    <h2>4. Data Sharing</h2>
+    <p>We <strong>do not sell, rent, or trade personal data</strong>. We only share data with:</p>
     <ul>
-      <li><strong>California (CCPA/CPRA):</strong> Right to know, delete, or opt-out (we do not sell data).</li>
-      <li><strong>European Union (GDPR):</strong> Right to access, correct, delete, restrict, or withdraw consent.</li>
-      <li><strong>UAE & Middle East:</strong> Right to clear information, access, or request deletion of personal data.</li>
+      <li><strong>Payment Processors:</strong> (Stripe, PayPal) to process payments and handle dispute resolution.</li>
+      <li><strong>Service Providers:</strong> Hosting providers (GitHub, Netlify, Vercel) and communication tools (Google Workspace) necessary to run our business.</li>
+      <li><strong>Legal Authorities:</strong> If required by law or to protect our rights (e.g., submitting evidence during a bank dispute).</li>
     </ul>
 
-    <h2>5. Data Transfers</h2>
-    <p>If your data is transferred internationally (e.g., to the U.S.), we ensure compliance with GDPR, CCPA, and UAE standards.</p>
+    <h2>5. International Data Transfers</h2>
+    <p>Backkai LLC is a US entity with a global workforce. Your data may be processed in the United States, India, or other locations. We ensure all transfers comply with standard contractual clauses and maintain strict security protocols regardless of location.</p>
 
-    <h2>6. Data Retention</h2>
-    <p>We retain data only as long as necessary to provide services or comply with legal and financial obligations.</p>
+    <h2>6. Your Rights</h2>
+    <p>Depending on your location, you have specific rights regarding your data:</p>
+    <ul>
+      <li><strong>US (California/Delaware):</strong> Right to know what data we collect, request deletion, and opt-out of sales (though we do not sell data).</li>
+      <li><strong>EU/UK (GDPR):</strong> Right to access, correct, delete, or restrict processing of your data.</li>
+      <li><strong>UAE/Middle East:</strong> Right to access and request erasure of personal data under the PDPL.</li>
+    </ul>
+    <p>To exercise these rights, email us at <a href="mailto:info@backkai.com">info@backkai.com</a>.</p>
 
-    <h2>7. Data Security</h2>
-    <p>We use encryption, secure servers, and access controls to protect your data from unauthorized access, misuse, or loss.</p>
+    <h2>7. Data Retention</h2>
+    <p>We retain your personal and project data only as long as necessary to fulfill the service, provide ongoing maintenance, or comply with tax/legal obligations (typically 7 years for financial records).</p>
 
-    <h2>8. Cookies</h2>
-    <p>We use cookies and tracking tools to improve website performance and analyze usage. You can disable cookies in your browser settings.</p>
+    <h2>8. Security</h2>
+    <p>We use industry-standard encryption (SSL/TLS), secure access controls, and two-factor authentication to protect your data. However, no method of transmission over the internet is 100% secure.</p>
 
-    <h2>9. Children’s Privacy</h2>
-    <p>Our services are not directed to children under 16. We do not knowingly collect data from minors.</p>
+    <h2>9. Cookies</h2>
+    <p>We use essential cookies to make our website function and analytics cookies to understand site performance. You can disable cookies in your browser settings, though some site features may stop working.</p>
 
     <h2>10. Updates to This Policy</h2>
-    <p>We may update this Privacy Policy as needed. Any updates will be posted with a new “Last Updated” date.</p>
+    <p>We may update this policy to reflect changes in our services or laws. The "Last Updated" date at the top will indicate when changes were made.</p>
 
     <h2>11. Contact Us</h2>
-    <p>If you have questions or requests about this Privacy Policy, contact us:</p>
+    <p>For privacy concerns, data requests, or questions:</p>
     <p><strong>Backkai LLC</strong><br>
        8 The Green, Dover, Delaware 19901, USA<br>
        📞 +1 (302) 276-8188<br>
-       📧 <a href="mailto:info@backkai.com">Info@backkai.com</a></p>
+       📧 <a href="mailto:info@backkai.com">info@backkai.com</a></p>
 
     <footer>
-      &copy; 2025 Backkai LLC. All Rights Reserved.
+      &copy; 2026 Backkai LLC. All Rights Reserved.
     </footer>
   </div>
 </body>
