Remove 'Wedding Video Editing' from keywords meta tag

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <meta name="description" content="Backkai LLC is a Delaware-based technical partner specializing in high-speed web development, website bug fixing, and AI business automation. Get your free speed audit today.">
 
-    <meta name="keywords" content="Web Performance, Speed Optimization, AI Automation, NotebookLM, Website Maintenance, Wedding Video Editing, Backkai LLC, Delaware Web Agency, Bug Fixing">
+    <meta name="keywords" content="Web Performance, Speed Optimization, AI Automation, NotebookLM, Website Maintenance, Backkai LLC, Delaware Web Agency, Bug Fixing">
 
     <meta name="robots" content="index, follow">
 
@@ -65,6 +65,12 @@
     <meta property="twitter:description" content="Is your website slow? We build digital assets that load instantly. US-based technical support and AI automation workflows.">
 
     <meta name="twitter:image" content="https://www.backkai.com/assets/og-image.jpg">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&family=Inter:wght@400;500&display=swap" rel="stylesheet">
+
+    <script src="https://unpkg.com/feather-icons"></script>
 
 
 
