Update accent colors in index.html

--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
 
             --bg-dark-secondary: #1B1B1B;
 
-            --accent-blue: #007BFF;
+            --accent-blue: #4dabf7;
 
-            --accent-cyan-hover: #00FFFF;
+            --accent-cyan-hover: #ffffff;
 
             --text-primary: #F5F5F5;
 
