Revise content for clarity and engagement
Updated text in the hero section and testimonials to better reflect services and client experiences.

--- a/index.html
+++ b/index.html
@@ -928,13 +928,13 @@
 
             <div class="container">
 
-                <h1>We Fix Broken Websites & Automate Boring Work.</h1>
+                <h1>We Fix Slow, Broken Websites That Lose You Customers.</h1>
 
-                <p>“Backkai LLC is a Delaware-based technical partner for businesses that need speed, security, and AI automation. No fluff, just code.”</p>
+                <p>“We help small businesses fix website issues, improve speed, and rebuild outdated sites without long contracts or Agency Headaches.”</p>
 
                 <div class="hero-buttons">
 
-                    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=info@backkai.com" target="_blank" rel="noopener" class="btn btn-primary">Email Us</a>
+                    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=info@backkai.com" target="_blank" rel="noopener" class="btn btn-primary">Get a Free Website Check</a>
 
 
 
@@ -1066,7 +1066,7 @@
 
                     <strong>scale smarter and faster</strong> through innovative technology, 
 
-                    creative media solutions, and reliable outsourcing. From complex technical 
+                    creative solutions, and reliable outsourcing. From complex technical 
 
                     challenges to daily operational demands, we 
 
@@ -1122,9 +1122,9 @@
 
                         <div>
 
-                            <h3 class="text-lg font-semibold text-white">Vetted Global Talent</h3>
+                            <h3 class="text-lg font-semibold text-white">👨‍💻 Direct Developer Support</h3>
 
-                            <p class="text-gray-300 text-sm">Access a curated pool of top-tier international experts without the hiring overhead.</p>
+                            <p class="text-gray-300 text-sm">You work directly with the person fixing your site clear communication,</p>
 
                         </div>
 
@@ -1178,7 +1178,7 @@
 
                             <h3 class="text-lg font-semibold text-white">Scalable Solutions</h3>
 
-                            <p class="text-gray-300 text-sm">From startups to enterprises, our flexible services adapt as your business grows.</p>
+                            <p class="text-gray-300 text-sm">From Small business to enterprises, our flexible services adapt as your business grows.</p>
 
                         </div>
 
@@ -1198,23 +1198,24 @@
 
             <div class="container">
 
-                <h2>Trusted by Innovative Companies</h2>
+                <h2>Why Clients Choose Us</h2>
 
                 <div class="testimonials-grid">
 
                     <div class="testimonial-card">
 
-                        <p>"Working with Backkai has been a game changer. Their web development team is top notch, and the fast turnaround allowed us to launch ahead of schedule. Highly recommended!"</p>
+                        <p>"Security-aware development — best practices to keep your site safe"</p>
+                        <p>""Focused on results — a website that actually supports your business goals</p>
 
                         <div class="testimonial-author">
 
-                            <img src="https://images.unsplash.com/photo-1557862921-37829c790f19?q=80&w=2071&auto=format&fit=crop" alt="Author 1">
+                       <!--     <img src="https://images.unsplash.com/photo-1557862921-37829c790f19?q=80&w=2071&auto=format&fit=crop" alt="Author 1">
 
                             <div class="author-info">
 
                                 <strong>John Carter</strong>
 
-                                <span>Innovate llc.</span>
+                                <span>Innovate llc.</span> -->
 
                             </div>
 
@@ -1224,17 +1225,19 @@
 
                     <div class="testimonial-card">
 
-                        <p>"The website fixing service is incredible. They took our website access and turned it into professional lead generation Machine."</p>
+                        <p>"We fix real problems: slow load times, broken forms, and layout issues that cost you leads."</p>
+                        <p>"SEO-friendly fixes:  clean structure that search engines can understand"</p>
+                        
 
                         <div class="testimonial-author">
 
-                            <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?q=80&w=2070&auto=format&fit=crop" alt="Author 2">
+                     <!--       <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?q=80&w=2070&auto=format&fit=crop" alt="Author 2">
 
                             <div class="author-info">
 
                                 <strong>Sara</strong>
 
-                                <span>Creative design.</span>
+                                <span>Creative design.</span> -->
 
                             </div>
 
