Update contact information in index.html

--- a/index.html
+++ b/index.html
@@ -907,7 +907,7 @@
                 <h1>Website Fix & Web Development for Businesses in the US</h1>
 
                 <p>
-                We help small businesses across the United States fix broken websites, improve page speed, and rebuild outdated sites so they get more leads — without long contracts.
+                We help small businesses across the United States fix broken websites, improve page speed, and rebuild outdated sites so they get more leads without long contracts.
                 </p>
 
 
@@ -1292,7 +1292,7 @@
 
                         <p>Address<br>8 The Green, Dover<br>Delaware - 19901</p>
 
-                        <p>Phone:<br><a href="tel:302-276-8188">302-276-8188</a></p>
+                        <p>Phone:<br><a href="tel:321-334-6975">321-334-6975</a></p>
 
                         <p>Email:<br><a href="https://mail.google.com/mail/?view=cm&fs=1&to=info@backkai.com" target="_blank" rel="noopener">info@backkai.com</a></p>
 
